--- a/fakultet/appsettings.json
+++ b/fakultet/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DevConnection": "Server=DESKTOP-79C4MK4;Database=ApplicatioDB;Trusted_Connection=True;MultipleActiveResultSets=True"
+    "DevConnection": "Server=DESKTOP-79C4MK4;Database=ApplicationDB;Trusted_Connection=True;MultipleActiveResultSets=True"
   }
 }
